test/error/parse/ErrAstEnd.mod
MODULE ErrAstEnd;
CONST A = LSL(1, -1);
END ErrAstEnd.
